[package]
name = "lers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
vendored = ["openssl/vendored", "reqwest/native-tls-vendored"]

[dependencies]
base64 = "0.21.0"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
openssl = "0.10"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1", features = ["fs", "time"] }

[dev-dependencies]
once_cell = { version = "1", features = ["parking_lot"] }
parking_lot = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
