[package]
name = "lers"
description = "An async, user-friendly Let's Encrypt/ACMEv2 library written in Rust"
version = "0.4.0"
edition = "2021"

license = "MIT"
homepage = "https://github.com/akrantz01/lers"
repository = "https://github.com/akrantz01/lers"

keywords = ["acme", "autocert", "letsencrypt", "tls"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["http-01"]
vendored = ["openssl/vendored", "reqwest/native-tls-vendored"]

http-01 = ["hyper", "uuid"]
dns-01 = ["trust-dns-resolver"]
tls-alpn-01 = ["rcgen"]
dns-01-cloudflare = ["dns-01"]

integration = []

[dependencies]
async-trait = "0.1"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
hex = "0.4.3"
hyper = { version = "0.14", features = ["server", "tcp"], optional = true }
once_cell = { version = "1", features = ["parking_lot"] }
openssl = "0.10"
parking_lot = "0.12"
rcgen = { version = "0.13", default-features = false, optional = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "time"] }
tracing = "0.1"
trust-dns-resolver = { version = "0.23.2", optional = true }
uuid = { version = "1.4.1", features = ["v4"], optional = true }

[dev-dependencies]
anyhow = "1"
env_logger = "0.10"
native-tls = { version = "0.2" }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-native-tls = { version = "0.3" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
x509-parser = "0.15"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "http-01"
required-features = ["http-01"]

[[example]]
name = "dns-01"
required-features = ["dns-01", "dns-01-cloudflare"]

[[example]]
name = "tls-alpn-01"
required-features = ["tls-alpn-01"]
